# jazz-api

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
create_albums/: Cargo.toml
create_albums/src/: main.rs
get_albums/: Cargo.toml
get_albums/src/: main.rs
shared/: Cargo.toml
shared/src/: album.rs  events.rs  lib.rs  spin_album_payload.rs
shared/src/dynamo/: create.rs  mod.rs  query.rs  spin.rs
spin_albums/: Cargo.toml
spin_albums/src/: main.rs  naive.rs
