[package]
name = "shared"
version = "0.1.0"
authors = ["Joe Duran <joeduran8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
uuid = {version = "0.8", features = ["serde", "v4"]}
chrono = "0.4.9"
rusoto_core = {version = "0.40.0", default_features = false, features = ["rustls"]}
rusoto_dynamodb = {version = "0.40.0" , default_features = false, features = ["rustls"]}
lazy_static = "1.4.0"
dynomite = {version = "0.6", default_features = false, features = ["rustls"] }
maplit = "1.0.2"
rand = "0.7.2"
lambda_runtime = "0.1"
