[package]
name = "spin_albums"
version = "0.1.0"
authors = ["Joe Duran <joeduran8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
shared = {path = "../shared"}